--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<!-- <mat-toolbar color="primary" class="app-toolbar no-print" [class.transitioning]="isTransitioning">
+<mat-toolbar color="primary" class="app-toolbar no-print" [class.transitioning]="isTransitioning">
   <mat-toolbar-row class="notification-container">
-    <aio-notification notificationId="survey-february-2019" expirationDate="2019-03-01" [dismissOnContentClick]="true"
+    <!-- <aio-notification notificationId="survey-february-2019" expirationDate="2019-03-01" [dismissOnContentClick]="true"
       (dismissed)="notificationDismissed()">
       <a href="http://bit.ly/angular-survey-2019">
         <mat-icon class="icon" svgIcon="insert_comment" aria-label="Announcement"></mat-icon>
         <span class="message">Help Angular by taking a <b>1 minute survey</b>!</span>
         <span class="action-button">Go to survey</span>
       </a>
-    </aio-notification>
+    </aio-notification> -->
   </mat-toolbar-row>
   <mat-toolbar-row>
     <button mat-button class="hamburger" [class.starting]="isStarting" (click)="sidenav.toggle()" title="Docs menu">
@@ -19,21 +19,17 @@
       <img *ngSwitchDefault src="assets/images/logos/angular/shield-large.svg" width="37" height="40" title="Home"
         alt="Home">
     </a>
-    <aio-top-menu *ngIf="isSideBySide" [nodes]="topMenuNodes"></aio-top-menu>
+    <!-- <aio-top-menu *ngIf="isSideBySide" [nodes]="topMenuNodes"></aio-top-menu>
     <aio-search-box class="search-container" #searchBox (onSearch)="doSearch($event)" (onFocus)="doSearch($event)">
-    </aio-search-box>
+    </aio-search-box> -->
     <div class="toolbar-external-icons-container">
       <a href="https://twitter.com/angular" title="Twitter" aria-label="Angular on twitter">
         <mat-icon svgIcon="logos:twitter"></mat-icon>
       </a>
       <a href="https://github.com/angular/angular" title="GitHub" aria-label="Angular on github">
-
-
-
         <mat-icon svgIcon="logos:github"></mat-icon>
       </a>
+
     </div>
   </mat-toolbar-row>
-</mat-toolbar> -->
-
-
+</mat-toolbar>
